Fix display credits positioning in header for better alignment

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -27,6 +27,7 @@ header {
     padding: 0.5em 1em;
     background: rgba(0, 0, 0, 0.66);
     border-radius: 8px;
+    right: 0;
     i {
       font-family: "Lato", sans-serif;
       font-size: 20px;
